# dev_packages

./: MONOREPO_SETUP.md  README.md
.claude/: settings.local.json
google-pagespeed-insights/: README.md  package.json  setup.py
google-pagespeed-insights/google_pagespeed_insights.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
google-pagespeed-insights/src/: __init__.py  pagespeed.py
supabase-client/: .env.example  MANIFEST.in  SUPABASE_MODULE_OVERVIEW.md  SUPABASE_QUICKSTART.md  pyproject.toml  requirements_supabase.txt  setup.py
supabase-client/examples/: basic_usage.py  custom_service_example.py
supabase-client/supabase_client/: README.md  __init__.py  client.py  config.py  supabase_api.py
supabase-client/supabase_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
supabase-client/supabase_client/models/: __init__.py  example_service.py  users_service.py
supabase-client/supabase_client/services/: __init__.py  base_service.py  crud_service.py
supabase-client/supabase_client/utils/: __init__.py  helpers.py
unipile-client/: MANIFEST.in  UNIPILE_QUICKSTART.md  pyproject.toml  setup.py  unipile_api.py
unipile-client/examples/: basic_usage.py
unipile-client/unipile_client/: README.md  __init__.py  client.py  config.py  profiles.py
